--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 <body x-data="bodyFunction()" :class="{ 'keyboard-navigation' : keyboardNavigation }" @mouseup="keyboardNavigation = false" @keydown.tab="keyboardNavigation = true">
     <div class="
       [c skip-link ]
-      [l absolute left-1/2 p-2 ]
-      [s bg-black text-white font-bold ]
+      [l absolute left-4 -mt-4 focus:mt-2 focus-within:mt-2 ]
       [a transform -translate-y-full transition duration-300 focus:translate-y-0 focus-within:translate-y-0 ]">
-        <a href="#main">Skip to content</a>
+        <a href="#main" class="
+        [l p-3 pt-5 ]
+        [s bg-warmgray-100 text-blue font-bold shadow-md rounded-md border border-blue outline-0 ]">Skip to content</a>
     </div>
 
     <header class="container wrapper">
@@ -117,7 +118,7 @@
         </div>
     </section>
 
-    <section role="main" class="container wrapper pb-0">
+    <section role="main" id="main" class="container wrapper pb-0">
         <div class="row text-center sm-max:v-spaced">
             <div class="col content-style--split md:w-1/3">
                 <div class="content-style--card">
